--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && cp _redirects /dist && vite build",
+    "build": "tsc -b  && vite build && cp _redirects /dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
